--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
     <title>Webpack-demos</title>
   </head>
   <body>
-  <script type="text/javascript" src="src/bundle-d1d79e090ffac16c41fc.js"></script></body>
+  <script type="text/javascript" src="./src/bundle-d1d79e090ffac16c41fc.js"></script></body>
 </html>
